README.md updated

--- a/week-01/day-2/webpage/style.css
+++ b/week-01/day-2/webpage/style.css
@@ -12,12 +12,12 @@ body {
     display: inline;
     width: 50%;
     margin-right: 100px;
+    text-align: right;
 }
 
 a {
     color: #ff0099;
     padding: 10px;
-    float: right;
 }
 
 .div-logo {
