--- a/week-06/day-1/exercise_4_2/style.css
+++ b/week-06/day-1/exercise_4_2/style.css
@@ -1,13 +1,15 @@
-
 nav {
+  position: fixed;
+  z-index: 1;
   display: flex;
   align-items: center;
   height: 10%;
   background-color: #b02aff;
+  width: 100%;
 }
 
-.box{
-  background-color: #DDDDDD;
+.box {
+  background-color: #dddddd;
   height: 40%;
   width: 10%;
   margin: 1%;
@@ -23,20 +25,26 @@ main {
   background-color: #ffd62a;
   height: 78%;
   width: 65%;
-  margin: 1%;
+  margin-top: 6%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 1%;
 }
 
 .side-bar {
   background-color: #51d400;
   height: 78%;
   width: 25%;
-  margin: 1%;
+  margin-top: 6%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 1%;
 }
 
-footer{
+footer {
   width: 92%;
   height: 8%;
-  background-color: #DDDDDD;
+  background-color: #dddddd;
   margin-left: 1%;
   margin-right: 1%;
 }
