--- a/week-06/day-4/todos/views/home.ejs
+++ b/week-06/day-4/todos/views/home.ejs
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Todos</title>
 </head>
 <body>
-  <p>HELLO</p>
+  <h1>Things to do today:</h1>
+  <ul>
+    <li><%= todo1 %></li>
+    <li><%= todo2 %></li>
+    <li><%= todo3 %></li>
+  </ul>
 </body>
 </html>
