--- a/week-06/day-4/cocktails/views/home.ejs
+++ b/week-06/day-4/cocktails/views/home.ejs
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Cocktails</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="main.js"></script>
 </head>
+
 <body>
-  <p>HELLO</p>
+  <h1>Cocktails</h1>
+<ul>
+  <li>ALL</li>
+  <% alcoholList.forEach(alcohol => { %>
+    <li><%= alcohol.toUpperCase() %></li>
+ <% }) %>
+</ul>
+
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Price</th>
+    </tr>
+    <tr>
+<% cocktails.forEach(cocktail => { %>
+  <tr>
+    <td><p><%= cocktail.name %></p><p><%= cocktail.contains %></p></td>
+    <td><%=cocktail.price  %></td>
+  </tr>
+<% }) %>
+</tr>
+  </table>
+
 </body>
+
 </html>
