(fix)code styled in styles.css

--- a/reddit_clone/style.css
+++ b/reddit_clone/style.css
@@ -4,14 +4,14 @@
   padding: 0;
 }
 
-body{
-  background-color:  rgb(206, 178, 255, 0.2);
+body {
+  background-color: rgb(206, 178, 255, 0.2);
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-header{
+header {
   background-image: url('img/lot_of_goats.jpg');
   margin: 10px;
   background-position: center;
@@ -22,31 +22,36 @@ header{
   align-items: center;
 }
 
-.title{
+.title {
   color: white;
   font-size: 90px;
   font-weight: 300;
   text-shadow: 5px 2px 5px rgba(6, 4, 4, 0.4);
 }
 
-.main-container{
+.main-container {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
 }
 
-.main-container, .post-container, .post, .btn-new-post, .side-bar-container, header{
+.main-container,
+.post-container,
+.post,
+.btn-new-post,
+.side-bar-container,
+header {
   border-radius: 8px;
 }
 
-.post-container{
+.post-container {
   border: 1px solid rgb(206, 178, 255, 0.7);
-  background-color:rgb(206, 178, 255, 0.3);
+  background-color: rgb(206, 178, 255, 0.3);
   display: flex;
   margin: 10px;
 }
 
-.post{
+.post {
   width: 70vw;
   display: flex;
   flex-direction: column;
@@ -54,19 +59,22 @@ header{
   align-content: space-between;
 }
 
-.post-data{
+.post-data {
   font-size: 14px;
 }
 
-.post-title, .post-url, .post-data{
+.post-title,
+.post-url,
+.post-data {
   margin: 10px;
 }
 
-.distinct-line{
+.distinct-line {
   color: rgb(206, 178, 255, 0.8);
 }
 
-.btn-edit, .btn-delete{
+.btn-edit,
+.btn-delete {
   border: none;
   border-radius: 2px;
   padding-left: 2px;
@@ -75,65 +83,65 @@ header{
   transition: 0.2s;
 }
 
-.btn-delete:hover{
+.btn-delete:hover {
   background-color: red;
   color: white;
   cursor: pointer;
 }
 
-.btn-edit:hover{
+.btn-edit:hover {
   background-color: green;
   color: white;
   cursor: pointer;
 }
 
-.vote{
+.vote {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 5px;
-  background-color:  rgb(206, 178, 255, 0.5);
+  background-color: rgb(206, 178, 255, 0.5);
 }
 
-.arrow{
+.arrow {
   font-size: 25px;
-  color:rgba(6, 4, 4, 0.4);
+  color: rgba(6, 4, 4, 0.4);
   transition: 0.2s;
 }
 
-.arrow:hover{
+.arrow:hover {
   cursor: pointer;
   color: blue;
 }
 
-.arrow:active{
+.arrow:active {
   color: mediumblue;
 }
 
-.side-bar-container{
+.side-bar-container {
   display: flex;
   flex-direction: column;
   margin: 10px;
   border: 1px solid rgb(206, 178, 255, 0.7);
 }
 
-.info-paragraph{
+.info-paragraph {
   padding: 5px;
   margin-left: 5px;
 }
 
-ul{
+ul {
   padding: 5px;
   list-style: none;
   margin-left: 15px;
 }
 
-li{
+li {
   padding: 5px;
 }
 
-.btn-new-post{
+.btn-new-post {
   text-transform: uppercase;
   border: none;
   padding: 5px;
@@ -143,36 +151,34 @@ li{
   transition: 0.2s;
 }
 
-.btn-new-post:hover{
+.btn-new-post:hover {
   background-color: rgba(12, 78, 221, 0.9);
   cursor: pointer;
 }
 
-.btn-new-post:active{
+.btn-new-post:active {
   background-color: rgba(12, 78, 221, 0.6);
 }
 
-.about-header{
+.about-header {
   background-color: rgb(160, 160, 160);
   padding: 5px;
   color: white;
   border-top-left-radius: 8px;
-  border-top-right-radius: 8px
+  border-top-right-radius: 8px;
 }
 
 @media (min-width: 480px) and (max-width: 1024px) {
-  
-  .main-container{
+  .main-container {
     flex-wrap: wrap;
   }
 
-  .side-bar-container{
+  .side-bar-container {
     order: -1;
     min-width: 82vw;
   }
 
-  .post-list{
+  .post-list {
     min-width: 85vw;
   }
-  
 }
