--- a/reddit_clone/style.css
+++ b/reddit_clone/style.css
@@ -149,6 +149,8 @@ li {
   background-color: rgba(12, 78, 221, 0.7);
   color: white;
   transition: 0.2s;
+  text-align: center;
+  text-decoration: none;
 }
 
 .btn-new-post:hover {
